--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3,6 +3,28 @@ body {
   padding-bottom: 20px;
 }
 
+.console {
+  font-size: 12px !important;
+  font-family: Consolas, Lucida Console, monospace;
+  flex: 1 1;
+  padding: 2px 0;
+  overflow-y: auto;
+  word-wrap: break-word;
+  -webkit-user-select: text;
+  height:128px;
+  transform: translateZ(0);
+}
+.console-message {
+  clear: right;
+  position: relative;
+  padding: 3px 22px 1px 0;
+  margin-left: 24px;
+  min-height: 18px;
+  flex: auto;
+  display: flex;
+  border-bottom: 1px solid rgb(240, 240, 240);
+  white-space: pre-wrap;
+}
 
 canvas {
   outline: none;
